[metadata]
name = dearpygui-obj
version = 0.0.1
author = Mike Werezak
author_email = mwerezak@gmail.com
description = An object-oriented wrapper around DearPyGui.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwerezak/DearPyGui-Obj
project_urls =
    Bug Tracker = https://github.com/mwerezak/DearPyGui-Obj/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
packages = find:
python_requires = >=3.8