[metadata]
name = dearpygui-obj
version = 0.6.1
author = Mike Werezak
author_email = mwerezak@gmail.com
description = An object-oriented wrapper around DearPyGui.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwerezak/DearPyGui-Obj
project_urls =
    Bug Tracker = https://github.com/mwerezak/DearPyGui-Obj/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10


[options]
packages = find:
python_requires = >=3.8